# asteroid

./: .gitignore  CMakeLists.txt  README.md  tmp.txt
include/: asteroid.h  earth.h  geometry_utils.h  logger.h  open_gl_manager.h  renderer.h  simulation_orchestrator.h  simulation_state.h  simulator.h  thread_manager.h
res/shaders/: shader.shader
src/: geometry_utils.cpp  main.cpp  open_gl_manager.cpp  renderer.cpp  simulation_orchestrator.cpp  simulator.cpp  thread_manager.cpp
